--- a/epub_source/OEBPS/Text/contents.xhtml
+++ b/epub_source/OEBPS/Text/contents.xhtml
@@ -12,7 +12,7 @@
 <body id="calibre_generated_inline_toc" class="mp_body">
 <h2>目录</h2>
 <div class="toc_border">
-	<h3 class="toc_title"><a class="toc_link" href="../Text/index_split_000.html#calibre_toc_1">梅花拳秘谱︵ 含燕子杰评注︶</a></h3>
+	<h3 class="toc_title"><a class="toc_link" href="../Text/index_split_000.html#calibre_toc_1">梅花拳秘谱（ 含燕子杰评注）</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_001.html#calibre_toc_2">练拳须知</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_002.html#calibre_toc_3">梅拳概论</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_003.html#calibre_toc_4">浑元论</a></h3>
@@ -66,7 +66,7 @@
     	</div>
     </h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_036.html#calibre_toc_47">校勘记</a></h3>
-    <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_037.html#calibre_toc_48">习武序︵ 考订本︶</a></h3>
+    <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_037.html#calibre_toc_48">习武序（ 考订本）</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_038.html#calibre_toc_49">习武规矩十二条</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_039.html#calibre_toc_50">问答篇</a></h3>
     <h3 class="toc_title"><a class="toc_link" href="../Text/index_split_040.html#calibre_toc_51">一贯之道</a></h3>
