--- a/epub_source/OEBPS/Text/index_split_000.html
+++ b/epub_source/OEBPS/Text/index_split_000.html
@@ -10,18 +10,18 @@
  
 </head>
   <body class="mp_body">
-        <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_1">梅花拳秘谱︵ 含燕子杰评注︶</h1>
+        <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_1">梅花拳秘谱（ 含燕子杰评注）</h1>
 <p class="mp_main">广泛流传在我国河北、山东、河南广大农村的梅花拳
-            <span class="mp_comment_inline">︻古称梅花桩，由于在100 根桩阵上锻炼而得名︼</span>
+            <span class="mp_comment_inline">【古称梅花桩，由于在100 根桩阵上锻炼而得名】</span>
             是一个源远流长、古朴而神秘的拳派，它是在明末农民起义的战乱中公开传授并兴盛起来的。早在1988 年之前，我国历史学家就从文献和历史传说中发现梅花拳在清末义和团反帝斗争中是发动者和主力。这种观点立即引起了国内外史学界的注意，但真正能深入了解梅花拳奥秘，却是1988 年年底以后。著名历史学家路遥教授与梅花拳弟子燕子杰教授等人合作，对河北、山东、河南义和团反帝斗争激烈或农民起义活跃的地区多次深入调查之后，大量事实证明义和拳就是梅花拳。这个拳派的弟子和许多著名拳师都是历代封建王朝的造反者或农民起义军的领袖。这个拳派能在历史上发挥如此重大的作用并不是偶然的。梅花拳有文场、武场之分，文场敬祖师，研究拳理，他们集佛、道、儒三家学说、周易之理为一体，有丰富的文化典籍世代相传，修身养性，炼神炼气，称为文功。文场老师领导拳派的整个活动，负责教育门内弟子；武场主要进行武功锻炼，其武术内容丰富多彩，有独特的练法和风格，一切都与当前流行的武术套路完全不同。它不仅有明显的强身健体作用，还有极强的技击实战能力。他们练武的目的是练形练气，由外及内，再由内而外，达内外一体，精气神合一，最后上升到文功。我们调查中就亲眼所见，各地许多梅花拳师不仅武艺高强且精通文理，善用阴阳八卦，能行医治病，他们虽都是七八十岁以上的老人，但体健神旺、思路敏捷，能审时度势，且有一定的人体特异功能。</p>
-<p class="mp_main">梅花拳组织严密，信仰坚定，内部团结，有许多优秀的传统。如：不准称王称霸，仗势欺人；不准打拳卖艺，卖弄炫耀自己。虽然尊敬祖师，但提倡平等互敬，能者为师，经常交流文理拳艺互通有无。由于以上种种原因，在广大农民反对历代封建王朝斗争中，梅花拳自然就成了起义军的核心工具和主要力量。上述社会历史调查的成果已被人称为﹁ 近代史研究中的突破﹂ ，引起了国内史学界、哲学界、医学界、武术界许多人的密切关注，其部分研究成果我们已写成专著，在1990 年10 月召开的﹁ 义和团运动国际学术会议﹂上披露。</p>
-<p class="mp_main">︽梅拳秘谱︾是继梅拳第五代祖师杨炳<span class="mp_comment_inline">︻清康熙1712 年的武探花︼</span>所写的︽习武序︾<span class="mp_comment_inline">︻1742 年 ︼</span>之后的又一梅花拳武功方面的重要文献，它的主导思想与精神是和︽习武序︾一文一脉相承的。</p>
-<p class="mp_main">由︽秘谱︾看出，梅花拳武功一开始就要炼神、炼气、炼形，要求形气合一、神气合一，内外兼练。梅花桩的拳法、器械中都要注意阴阳变化、五行相生相克之理，梅花桩的步法是其武功的精华。无论其拳法器械皆有八方变化，对人进行易理八卦思维的训练。︽秘谱︾中所讲的内丹，实即梅花拳之文功。关于梅花拳文功与武功之关系，︽秘谱︾说：﹁ 仙炼之则为内丹，武炼之则为外丹，然内丹未有不借外丹而成者也，盖动静互根，温养有法，自有结胎还原之妙。﹂ 可见武功为文功之基础。武功锻炼的目的是﹁ 练形以合外，练气以实内，内外合一坚硬如铁，自成金刚不坏之体，则超凡入圣上乘可登，若云制敌犹其小焉者也。﹂ 因此武功锻炼主要还是修身养心，先固根本。︽秘谱︾精辟论述了梅花桩的健身与技击、和与战的关系。︽秘谱︾说：﹁ 积精以化气，积气以化神，结于丹鼎，会于黄庭，灵妙不测，刚勇莫敌，为内丹之至宝，气力之根本也。﹂ 又说：﹁ 气无形属阳而化于神，血有质属阴而化于精，神虚故灵明不测变化无穷，精实故充塞凝聚坚硬莫敌，神必藉精，精必附神，精神合一，气力乃成。﹂</p>
-<p class="mp_main">在梅花拳门内由武功锻炼基础上所提炼出来的文理，被称为是培养﹁ 大将﹂ 之才的学问。梅花拳弟子们常说：﹁ 拳打脚踢小把戏，唯有文理通天地。﹂ ︽秘谱︾认为：﹁ 天地之道不外阴阳，阴阳转结出自天然。﹂ 人秉阴阳之气以生乃一小天地，拳势之一阴一阳转结承递无不合阴阳造化之理，故能生生不穷，无有止息。</p>
-<p class="mp_main">梅花拳拳法﹁ 本阴阳之理、太极之功，动之则分、静之则合，无过不及，随曲就伸，一气贯串，刚柔相济，步随身换，气随意发，蓄劲如开弓，发劲似射箭，知宽知窄随高就底，静之如山岳，按之有阴阳，无穷如天地，充实如太仓，动之似江河，行之似波浪，浩渺如江海，圆耀如三光。﹂ 梅花桩之八方行步疾箭蹿跳，拗步斜身，横走竖撞，左右翻转。前后扫蹬，灵活多变，包罗万象，正如︽秘谱︾所说：﹁ 走如风，站如钉，仰之弥高，俯之弥深，进之则长，退之则促，随东就西，声左则右，知己知彼，则百战百胜。﹂ 以上所述拳法如此，阵法、兵法亦是如此。如此锻炼怎能不启迪人之深思，开发人之智慧?</p>
-<p class="mp_main">︽梅拳秘谱︾虽系民间手抄本拳书，却是本才华横溢的佳作，不但其文字精美，可顺口成章，且寓意深远意味无穷，足见作者不但武功高超，也精通梅花桩文理。否则，不可能有此过人的才智和坦荡的胸怀。︽梅拳秘谱︾虽以气论为主导思想，但在其主要篇章中，如︽浑元论︾、︽聚气论︾、︽聚精会神气力渊源论︾等及其他篇章的某些论点中，其理论的深度早巳超出了以太极学说为基础的气论水平，成了今天指导练功者使拳法进入神化之境的理论基础。</p>
-<p class="mp_main">在︽梅拳秘谱︾的︽收肉变色论︾一文中说：﹁ 收肉原本作咽肉，近日问之同乡，皆云苌先生吸气则顷刻大瘦，故曰咽肉也。﹂ 可以知此秘谱是清乾隆年间，与当时著名武术家苌乃周同乡之人所作。据近代历史学家考证，清乾隆年间梅花桩已传至第五至八代，其弟子及影响已遍布河北、山东、河南一带的广大农村。因此苌乃周之苌家拳也是梅花桩武场中之一支，因其没有文场共存，而渐不知梅拳之事。梅花拳在清代一直是被封建统治者镇压的，因此该派拳术也一直是在民间秘密流传的，这也是梅拳的理论一直不能与世人见面的重要原因。</p>
-<p class="mp_main">︽梅花拳秘谱︾是梅花桩武功的重要文献，我们正在学习它、研究它，望梅花拳弟子们对前辈师爷们留下的这一宝贵财富尽力珍惜、爱护。</p>
+<p class="mp_main">梅花拳组织严密，信仰坚定，内部团结，有许多优秀的传统。如：不准称王称霸，仗势欺人；不准打拳卖艺，卖弄炫耀自己。虽然尊敬祖师，但提倡平等互敬，能者为师，经常交流文理拳艺互通有无。由于以上种种原因，在广大农民反对历代封建王朝斗争中，梅花拳自然就成了起义军的核心工具和主要力量。上述社会历史调查的成果已被人称为“近代史研究中的突破” ，引起了国内史学界、哲学界、医学界、武术界许多人的密切关注，其部分研究成果我们已写成专著，在1990 年10 月召开的“义和团运动国际学术会议”上披露。</p>
+<p class="mp_main">《梅拳秘谱》是继梅拳第五代祖师杨炳<span class="mp_comment_inline">【清康熙1712 年的武探花】</span>所写的《习武序》<span class="mp_comment_inline">【1742 年 】</span>之后的又一梅花拳武功方面的重要文献，它的主导思想与精神是和《习武序》一文一脉相承的。</p>
+<p class="mp_main">由《秘谱》看出，梅花拳武功一开始就要炼神、炼气、炼形，要求形气合一、神气合一，内外兼练。梅花桩的拳法、器械中都要注意阴阳变化、五行相生相克之理，梅花桩的步法是其武功的精华。无论其拳法器械皆有八方变化，对人进行易理八卦思维的训练。《秘谱》中所讲的内丹，实即梅花拳之文功。关于梅花拳文功与武功之关系，《秘谱》说：“仙炼之则为内丹，武炼之则为外丹，然内丹未有不借外丹而成者也，盖动静互根，温养有法，自有结胎还原之妙。” 可见武功为文功之基础。武功锻炼的目的是“练形以合外，练气以实内，内外合一坚硬如铁，自成金刚不坏之体，则超凡入圣上乘可登，若云制敌犹其小焉者也。” 因此武功锻炼主要还是修身养心，先固根本。《秘谱》精辟论述了梅花桩的健身与技击、和与战的关系。《秘谱》说：“积精以化气，积气以化神，结于丹鼎，会于黄庭，灵妙不测，刚勇莫敌，为内丹之至宝，气力之根本也。” 又说：“气无形属阳而化于神，血有质属阴而化于精，神虚故灵明不测变化无穷，精实故充塞凝聚坚硬莫敌，神必藉精，精必附神，精神合一，气力乃成。”</p>
+<p class="mp_main">在梅花拳门内由武功锻炼基础上所提炼出来的文理，被称为是培养“大将” 之才的学问。梅花拳弟子们常说：“拳打脚踢小把戏，唯有文理通天地。” 《秘谱》认为：“天地之道不外阴阳，阴阳转结出自天然。” 人秉阴阳之气以生乃一小天地，拳势之一阴一阳转结承递无不合阴阳造化之理，故能生生不穷，无有止息。</p>
+<p class="mp_main">梅花拳拳法“本阴阳之理、太极之功，动之则分、静之则合，无过不及，随曲就伸，一气贯串，刚柔相济，步随身换，气随意发，蓄劲如开弓，发劲似射箭，知宽知窄随高就底，静之如山岳，按之有阴阳，无穷如天地，充实如太仓，动之似江河，行之似波浪，浩渺如江海，圆耀如三光。” 梅花桩之八方行步疾箭蹿跳，拗步斜身，横走竖撞，左右翻转。前后扫蹬，灵活多变，包罗万象，正如《秘谱》所说：“走如风，站如钉，仰之弥高，俯之弥深，进之则长，退之则促，随东就西，声左则右，知己知彼，则百战百胜。” 以上所述拳法如此，阵法、兵法亦是如此。如此锻炼怎能不启迪人之深思，开发人之智慧?</p>
+<p class="mp_main">《梅拳秘谱》虽系民间手抄本拳书，却是本才华横溢的佳作，不但其文字精美，可顺口成章，且寓意深远意味无穷，足见作者不但武功高超，也精通梅花桩文理。否则，不可能有此过人的才智和坦荡的胸怀。《梅拳秘谱》虽以气论为主导思想，但在其主要篇章中，如《浑元论》、《聚气论》、《聚精会神气力渊源论》等及其他篇章的某些论点中，其理论的深度早巳超出了以太极学说为基础的气论水平，成了今天指导练功者使拳法进入神化之境的理论基础。</p>
+<p class="mp_main">在《梅拳秘谱》的《收肉变色论》一文中说：“收肉原本作咽肉，近日问之同乡，皆云苌先生吸气则顷刻大瘦，故曰咽肉也。” 可以知此秘谱是清乾隆年间，与当时著名武术家苌乃周同乡之人所作。据近代历史学家考证，清乾隆年间梅花桩已传至第五至八代，其弟子及影响已遍布河北、山东、河南一带的广大农村。因此苌乃周之苌家拳也是梅花桩武场中之一支，因其没有文场共存，而渐不知梅拳之事。梅花拳在清代一直是被封建统治者镇压的，因此该派拳术也一直是在民间秘密流传的，这也是梅拳的理论一直不能与世人见面的重要原因。</p>
+<p class="mp_main">《梅花拳秘谱》是梅花桩武功的重要文献，我们正在学习它、研究它，望梅花拳弟子们对前辈师爷们留下的这一宝贵财富尽力珍惜、爱护。</p>
 <p id="calibre_pb_0" class="mp_end"></p>
 </body>
 </html>
