--- a/epub_source/OEBPS/Text/index_split_002.html
+++ b/epub_source/OEBPS/Text/index_split_002.html
@@ -12,16 +12,16 @@
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_3">梅拳概论</h1>
 <p class="mp_main">夫我国拳术派别之众百有余门矣，但溯其源泉则一也。盖学拳者侧重于身体之一部，而展其所长，另创一家，于是门派生焉。迄今尤能保持原有状态者，仅梅拳耳。梅拳之始因年代之久远而不可知，传石汉时已有之，至今已有百廿余世矣。其内容基本则五势四门架子八方成拳拧拳梅花桩等。五势为大顺拗小败五势是也。势如梅树之花叶也，而架子如树之根干河之源泉，惟其变化又为其特长矣，兹分志之。</p>
-<p class="mp_comment">︻以下为架子中行步与桩步的主要练法︼</p>
+<p class="mp_comment">【以下为架子中行步与桩步的主要练法】</p>
 <p class="mp_main">架子四门此拳路也，均为四平大架子，包含四门五势八方等，亦是学者必由之路，通俗所谓盘架子是也。四门为练步之法，内含挤箭躐跳跃等，步熟之后，可任意横走竖撞，拗步斜身，亦可曰走如风，站如钉，仰之则高，俯之则深，进之则长、退之则促，随东就西、声左则右，知己知彼则百战百胜，使敌者如坠入五里雾中而不能辨其方向矣。</p>
 <p class="mp_main">五势之变化则本阴阳之理，太极之功，动之则分，静之则合；无过不及，随曲就伸，蓄劲如开弓，发劲似射箭。知宽知窄，随高就低，一气贯穿，刚柔相济，步随身换，气随意发。静之如山岳，按之有阴阳，无穷如天地，充实如太仓，一动似江河，行之似波浪，浩渺如江海，圆耀如三光。</p>
-<p class="mp_comment">︻在架子中行步可练步法之轻灵、动作之迅疾。而桩步则练全身之气血、养精气神之合一。此段，文字寓意极深，应熟记之。︼</p>
+<p class="mp_comment">【在架子中行步可练步法之轻灵、动作之迅疾。而桩步则练全身之气血、养精气神之合一。此段，文字寓意极深，应熟记之。】</p>
 <p class="mp_main">大势属金，须涵胸拔背，气敛丹田，静以观动，借劲使劲，或曰顺人之力借人之势也。顺势属水，其变化歌曰：顺势展开一条线，四路来人能改变，手眼身法步等。拗势属木，静势则斜身拗步，动作横走竖撞，迎风掌、斜身截步等又为此势中之得意手也。小势属火，站开其稳如钉，其变化尤多矣，刁拿锁带踢趟拨缩勾挂踩蹁，摧腿截腿尤为其特长矣。败势属土，千变万化，以快为其母，败中取胜，是其良技也。</p>
 <p class="mp_main">八方又名谓群步，即大八方、中八方、小八方是也。为交手时应用之步也。可进可退，可攻可守，动似鹄鹰攫兔，静之则如处女守身，绝手乱拳皆包于其中，讲上、中、下三盘。</p>
 <p class="mp_main">上盘之用法：刁拿锁带，崩挑劈截，中盘则歙懈柔化，贴身靠打，下盘则钩挂踩蹁、踢镗拨缩、前后扫腿皆包于其中，可搏敌如在迷阵也。</p>
 <p class="mp_main">梅花桩览野史阅者可以见之，此为本门独有之特长，他拳之所无，可交手于桩上，遇敌可操必胜之券。而成拳为学者必由之路，初步有一定之手，如拳架焉，拧拳则无定手矣，亦可谓见劲使劲、引进落空，一力降于十会，一巧破千斤，整学乱用，见空按豆无空手矣。但练习者须经三易寒暑，方可力顺气遍周身，动中求静，静中求动，此身化之谓也。待气随意发，力随气使，则气化之功又达矣。再练而致神化，神色可以伤人，此达深奥境也。苟吾人尽心学之，虽不能达其巅，亦可以健身自卫矣。简之，意深笔略，至三节九段内外三合等等，会者皆闻及，学拳之方法规矩海内皆知，笔者均略之。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：︽梅拳概论︾一文已将练法、用法及本门拳法构造之特点等融为一体，读后可基本了解梅拳之概貌。由此文我们可以看出，梅花桩以技击为主要内容的用法，是寓于练法之中的。架子，是该派武功的基本练法，它有四门、五势，桩步与行步之分，有动有静，变化多端，绝手乱拳皆包含于其中。八方为练步的基础，四门、八方又把拳法和阵法的训练统一起来。︼</p>
+<p class="mp_comment">【评注：《梅拳概论》一文已将练法、用法及本门拳法构造之特点等融为一体，读后可基本了解梅拳之概貌。由此文我们可以看出，梅花桩以技击为主要内容的用法，是寓于练法之中的。架子，是该派武功的基本练法，它有四门、五势，桩步与行步之分，有动有静，变化多端，绝手乱拳皆包含于其中。八方为练步的基础，四门、八方又把拳法和阵法的训练统一起来。】</p>
 <p id="calibre_pb_2" class="mp_end"></p>
 </body>
 </html>
