--- a/epub_source/OEBPS/Text/index_split_003.html
+++ b/epub_source/OEBPS/Text/index_split_003.html
@@ -11,10 +11,10 @@
 </head>
   <body class="mp_body">
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_4">浑元论</h1>
-<p class="mp_comment">︻此论是指导练法、用法最主要的理论，是练形、练气、练神的主要方法，浑元是指练功达到的境界︼</p>
-<p class="mp_main">浑元一气吾道成，道成莫外吾真形，真形内藏真精神，真精内藏气擎停。欲将形形求真形，须将真形合形形，真形合来有真诀，合到真形彻底灵。<span class="mp_comment_inline">︻形形者一势一法也，形气合一也。真形即精气神合一之象。︼</span></p>
+<p class="mp_comment">【此论是指导练法、用法最主要的理论，是练形、练气、练神的主要方法，浑元是指练功达到的境界】</p>
+<p class="mp_main">浑元一气吾道成，道成莫外吾真形，真形内藏真精神，真精内藏气擎停。欲将形形求真形，须将真形合形形，真形合来有真诀，合到真形彻底灵。<span class="mp_comment_inline">【形形者一势一法也，形气合一也。真形即精气神合一之象。】</span></p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：浑元一气是武功的最高境界，所谓﹁ 道成﹂ 即练成文武大道，练成之后即得﹁ 真形﹂ 。﹁ 真形﹂ 内有﹁ 真精神﹂ ，而﹁ 真精神﹂ 的核心是﹁ 气擎停﹂ ，这是一种武功达高层次时内气的自然聚散和运行。只有在武功达神化阶段后，所表现出的内外合一、精气神一体的现象才是武功的﹁ 真形﹂ 。武功锻炼的目的也就是追求﹁ 真形﹂ 。本文把武术运动中的一势一法都称为﹁ 形形﹂ ，而﹁ 形形﹂ 者武术运动之表象也，通过一势一法的拳势和动作，去追求武功的﹁ 真形﹂ 要靠﹁ 真诀﹂ 。﹁ 真诀﹂ 者即治心之理论也，当得到﹁ 真形﹂ 之后才能﹁ 彻底灵﹂ 。﹁ 彻底灵﹂ 即武术运动中之无拘无束、无阻无碍、自然流畅之表象，是武功已达神化阶段，自身已获得彻底解放之形态。佛家认为人的肉身不过是四大︵ 地、水、火、风︶因缘假合之物，人的心是﹁ 天尘缘影﹂ 之心，皆属虚幻，此处相当于本文所说的﹁ 形形﹂ ，﹁ 形形﹂ 也是虚幻暂存之物。佛家认为惟有﹁ 真如自性﹂ ，﹁ 圆觉妙心﹂ 才是本体﹁ 实相﹂ 。本文中的﹁ 真形﹂ 亦是武功的﹁ 本来面目﹂ ，它才是真实的存在。佛家修禅是以念止念、以心治心的，而武功锻炼是在﹁ 真诀﹂ 指导下的以武治心，真乃殊途同归也。︼</p>
+<p class="mp_comment">【评注：浑元一气是武功的最高境界，所谓“道成” 即练成文武大道，练成之后即得“真形” 。“真形” 内有“真精神” ，而“真精神” 的核心是“气擎停” ，这是一种武功达高层次时内气的自然聚散和运行。只有在武功达神化阶段后，所表现出的内外合一、精气神一体的现象才是武功的“真形” 。武功锻炼的目的也就是追求“真形” 。本文把武术运动中的一势一法都称为“形形” ，而“形形” 者武术运动之表象也，通过一势一法的拳势和动作，去追求武功的“真形” 要靠“真诀” 。“真诀” 者即治心之理论也，当得到“真形” 之后才能“彻底灵” 。“彻底灵” 即武术运动中之无拘无束、无阻无碍、自然流畅之表象，是武功已达神化阶段，自身已获得彻底解放之形态。佛家认为人的肉身不过是四大（ 地、水、火、风）因缘假合之物，人的心是“天尘缘影” 之心，皆属虚幻，此处相当于本文所说的“形形” ，“形形” 也是虚幻暂存之物。佛家认为惟有“真如自性” ，“圆觉妙心” 才是本体“实相” 。本文中的“真形” 亦是武功的“本来面目” ，它才是真实的存在。佛家修禅是以念止念、以心治心的，而武功锻炼是在“真诀” 指导下的以武治心，真乃殊途同归也。】</p>
 <p id="calibre_pb_3" class="mp_end"></p>
 </body>
 </html>
