--- a/epub_source/OEBPS/Text/index_split_006.html
+++ b/epub_source/OEBPS/Text/index_split_006.html
@@ -27,7 +27,7 @@
 
 
 	<h2 id="calibre_toc_11" class="mp_subtitle">阴阳分入，阴阳分扶说</h2>
-<p class="mp_main">此手膊开合势也。开胸合背者，阴气分入阳分，开背合胸者，阳气分入阴分，﹁ 势分两边﹂ ，故气亦从中劈开分入而分疾之。</p>
+<p class="mp_main">此手膊开合势也。开胸合背者，阴气分入阳分，开背合胸者，阳气分入阴分，“势分两边” ，故气亦从中劈开分入而分疾之。</p>
 
 
 	<h2 id="calibre_toc_12" class="mp_subtitle">阴阳旋入旋扶说</h2>
@@ -44,10 +44,10 @@
 
 	<h2 id="calibre_toc_15" class="mp_subtitle">阴阳乱点入扶说</h2>
 <p class="mp_main">此醉形势也。醉行者忽前忽后、忽仰忽俯、忽进忽退、忽斜忽正，势无定形，气亦随之乱为入扶也。但乱之中随势而布，阴阳不相悖谬，乱而却不可乱也。</p>
-<p class="mp_main">以上总论一身之大阴阳，其入扶如此。至于手背为阳，膊外为阳，三阳经行于手膊之外也。﹁ 手太阳经起于手小指背，手少阳经起于无名指背，手阳明经起于食指之背，皆上行循膊外而走也。﹂ 手心为阴，膊内为阴，三阴经行于手膊之内也。﹁ 手太阴经止于大指内侧，手厥阴经止于中指内面，手少阴经止于小指内面，皆行膊内止于指也。﹂ 足背为阳，腿外为阳，三阳经行于足腿之外也，﹁ 足太阳经止于足小指内之次指背，足少阳经止于足大指内之次指背，足阳明经止于足大指内之次指背，三经皆循腿外而止于指背。﹂ 足心为阴，腿内为阴，三阴经行于足腿之内也。﹁ 足太阴经起于足大指内侧下，足厥阴经起于足大指内侧上，足少阴经起于足小指过足心涌泉穴，三经皆循腿内也。﹂ 其手足尖之伸翘颠踏，膝胯之屈伸提落，虽用法无穷，而阴阳入扶自有一定，形合则气不牵扯，形不合则气必濡滞，逐处体验无遗纤细为妙。</p>
+<p class="mp_main">以上总论一身之大阴阳，其入扶如此。至于手背为阳，膊外为阳，三阳经行于手膊之外也。“手太阳经起于手小指背，手少阳经起于无名指背，手阳明经起于食指之背，皆上行循膊外而走也。” 手心为阴，膊内为阴，三阴经行于手膊之内也。“手太阴经止于大指内侧，手厥阴经止于中指内面，手少阴经止于小指内面，皆行膊内止于指也。” 足背为阳，腿外为阳，三阳经行于足腿之外也，“足太阳经止于足小指内之次指背，足少阳经止于足大指内之次指背，足阳明经止于足大指内之次指背，三经皆循腿外而止于指背。” 足心为阴，腿内为阴，三阴经行于足腿之内也。“足太阴经起于足大指内侧下，足厥阴经起于足大指内侧上，足少阴经起于足小指过足心涌泉穴，三经皆循腿内也。” 其手足尖之伸翘颠踏，膝胯之屈伸提落，虽用法无穷，而阴阳入扶自有一定，形合则气不牵扯，形不合则气必濡滞，逐处体验无遗纤细为妙。</p>
 <p class="mp_main">以上阴阳入扶各论，斜正仰俯左右旋转诸说，此即形气合一，一身之势法也。所谓浑元一气是也，此即五势梅花桩行功之势法也。前进后退，左旋右转，一身之法俱以五势为主。五势者，大势、顺势、拗势、小势、败势是也。正势大势也，直出者顺势也，十字势为拗势也。曲丁腿势为小势，斜侧势为败势也。此即五势梅花拳是也，又为五势梅花桩，在桩上为梅花桩，在地上为落地梅花也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：以上各篇入扶之说，都是从入气的角度指导练功的文章。八方群步忽左忽右，忽前忽后，忽仰忽俯，忽进忽退，忽斜忽正，势无定形，脚无定步。佛教禅宗修持的方法就是：﹁ 一切佛法总不用学，唯学无求无著。无求即心不生，无著即心不灭，不生不灭即是佛。﹂ 他们还认为：﹁ 恰恰无心用，恰恰用功时也，盖有功可用则缚于功，无功之功乃为无缚之真用功。﹂ 所以禅宗论修悟之道，亦常自立自破。佛法与道法相同，老子的﹁ 道无形﹂ 之理亦是如此。梅花桩拳法的练功之道也是自立自破的，因为凡是练功的方法，到了一定的阶段后就成了练功者的束缚，必须打破该功法、套路的框框。只有这样练功者才能无拘无束、无阻无碍，且有灵巧应变之能力。因此，梅花桩拳法亦是有套路而无套路，乱而却不可乱的，只要﹁ 气亦随之乱为入扶﹂ 及﹁ 阴阳不相悖谬﹂ 即可。练功者只要做到﹁ 形气合一﹂ ，不必拘泥于死板的套路和招势，这就是真正的拳法。︼</p>
+<p class="mp_comment">【评注：以上各篇入扶之说，都是从入气的角度指导练功的文章。八方群步忽左忽右，忽前忽后，忽仰忽俯，忽进忽退，忽斜忽正，势无定形，脚无定步。佛教禅宗修持的方法就是：“一切佛法总不用学，唯学无求无著。无求即心不生，无著即心不灭，不生不灭即是佛。” 他们还认为：“恰恰无心用，恰恰用功时也，盖有功可用则缚于功，无功之功乃为无缚之真用功。” 所以禅宗论修悟之道，亦常自立自破。佛法与道法相同，老子的“道无形” 之理亦是如此。梅花桩拳法的练功之道也是自立自破的，因为凡是练功的方法，到了一定的阶段后就成了练功者的束缚，必须打破该功法、套路的框框。只有这样练功者才能无拘无束、无阻无碍，且有灵巧应变之能力。因此，梅花桩拳法亦是有套路而无套路，乱而却不可乱的，只要“气亦随之乱为入扶” 及“阴阳不相悖谬” 即可。练功者只要做到“形气合一” ，不必拘泥于死板的套路和招势，这就是真正的拳法。】</p>
 <p id="calibre_pb_6" class="mp_end"></p>
 </body>
 </html>
