--- a/epub_source/OEBPS/Text/index_split_007.html
+++ b/epub_source/OEBPS/Text/index_split_007.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_16">论头</h1>
 <p class="mp_main">头圆像天，为法阳之会，为精髓之海，为督任交会之处，统领一身之气，阴阳入扶全视乎此。此处合则一身之气俱入，此处不合则全身之气俱失。其气之凝聚落点有一定之处，不可不知。正俯势为入阳气，头必俯而栽，气落额颅印堂间；正仰势为入阴气，头必仰而掀，气落脑后风府间；正侧势为阴阳气俱入，头必侧而栽，气落头角耳上也；斜侧俯势为阴阳气斜入，头必俯而歪，气落额角日月间；斜侧仰势为阴气斜入，头必仰而偏，气落枕骨近项间；直势不仰不俯，不偏不斜为阴阳直入，头必正而直，气顶百会正顶心。又要知催气之法，为不牵扯，如仰势入阴气，下颏掀、胸必昂、腹必鼓、手必举、脚必翘，则三尖一气阴气自入矣。俯势入阳气，下颏勾、背必弓、手必落、脚根掀，则三尖一气阳气自入矣。侧势阴阳俱入，腮必掀、肋必提、一脚颠、一脚落、一膊起、一膊插，则三尖一气阴阳并入矣。直起势阴阳上冲，头必顶肩必耸，脚起纵者翘尖提膝，不起纵者颠尖伸膝，则三尖一气阴阳俱入矣。斜侧仰俯可以类推。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：本文旨在说明﹁ 头﹂ 在练功与技击中的重要性，它统领一身之气，全身之阴阳能否和谐全要看它。因此，不论在练功或枝击中，都要注意﹁ 头﹂ 的俯仰斜正，使其与各种拳势身法相合，做到三尖——头尖、手尖、足尖一气，则阴阳俱入，百脉流畅，全身成一整体矣。︼</p>
+<p class="mp_comment">【评注：本文旨在说明“头” 在练功与技击中的重要性，它统领一身之气，全身之阴阳能否和谐全要看它。因此，不论在练功或枝击中，都要注意“头” 的俯仰斜正，使其与各种拳势身法相合，做到三尖——头尖、手尖、足尖一气，则阴阳俱入，百脉流畅，全身成一整体矣。】</p>
 <p id="calibre_pb_8" class="mp_end"></p>
 </body>
 </html>
