--- a/epub_source/OEBPS/Text/index_split_013.html
+++ b/epub_source/OEBPS/Text/index_split_013.html
@@ -15,7 +15,7 @@
 <p class="mp_main">此，惟务聚精会神以壮气力，但不知精何以聚，神何以会，是以殚毕生心力而漫无适从也。夫精以神聚，神以气会，欲求精聚神会，非聚气不能也。聚气之法，惟将谷道一撮，玉茎一束，使在下之气尽提于上而不下走，采天地之气尽力一吸，使在上之气尽归于下而不上散，上下凝合团聚中宫，则气聚而精凝，精凝而神充，自然由内达外无处不坚硬矣。即南林所谓内实精神之说也。但须练之于平日，早成根蒂，方能用之当前，无不坚实，不然如炮中无硝黄，弩弓无弦箭，</p>
 <p class="mp_main">满腔空洞，无物可发。欲求猛勇疾快如海倾山倒，势不可遏，必不能也。此为练气练形之最吃紧者，谨之秘之，慎勿轻传匪人。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：本文指出﹁ 神者，气之灵明也﹂ ，即﹁ 神﹂ 是﹁ 气﹂ 的灵魂。练梅花桩武功者练形、练气，还要练神。练功者积精以化气，积气以化神，结成内丹则﹁ 灵妙莫测，刚勇莫敌﹂ ，这才是人的气力之根本。梅花桩文武大法认为，人的气力之来源不单纯是筋肉，而是精气神合一的结果。实际上这是中国传统文化以整体观来看待气力的问题。精气神合一，内外成为一体，人体各部分的筋骨肌肉都谐和一体，当然要发出极大的力量。如果在意念支配下，单纯使用肌肉的力量，则只能是局部的，全身不能谐和，内外不能一致，则身体各部散乱而又相互牵扯，其气力自然要受到一定的限制。在上述问题上，武功锻炼与现代体育、武术技击与拳击角力等都有重大的分歧。这个分歧反映了中西文化在根本观点上的重大差异。武术理论是与中国的传统文化一脉相承的，梅花桩功更是中国传统文化的一个窗口，如果不了解中国传统文化的特点，也就难以理解本文的论点了。︼</p>
+<p class="mp_comment">【评注：本文指出“神者，气之灵明也” ，即“神” 是“气” 的灵魂。练梅花桩武功者练形、练气，还要练神。练功者积精以化气，积气以化神，结成内丹则“灵妙莫测，刚勇莫敌” ，这才是人的气力之根本。梅花桩文武大法认为，人的气力之来源不单纯是筋肉，而是精气神合一的结果。实际上这是中国传统文化以整体观来看待气力的问题。精气神合一，内外成为一体，人体各部分的筋骨肌肉都谐和一体，当然要发出极大的力量。如果在意念支配下，单纯使用肌肉的力量，则只能是局部的，全身不能谐和，内外不能一致，则身体各部散乱而又相互牵扯，其气力自然要受到一定的限制。在上述问题上，武功锻炼与现代体育、武术技击与拳击角力等都有重大的分歧。这个分歧反映了中西文化在根本观点上的重大差异。武术理论是与中国的传统文化一脉相承的，梅花桩功更是中国传统文化的一个窗口，如果不了解中国传统文化的特点，也就难以理解本文的论点了。】</p>
 <p id="calibre_pb_13" class="mp_end"></p>
 </body>
 </html>
