--- a/epub_source/OEBPS/Text/index_split_017.html
+++ b/epub_source/OEBPS/Text/index_split_017.html
@@ -13,9 +13,9 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_24">三节九段论</h1>
 <p class="mp_main">三节者，又天地人三才也。人有上中下三节，身体立正两手上伸，则两臂为上节，白头至臀为中节，自胯至足为下节。两手在上像天之日月星，身体居中像人有精气神，两足在下像地有水火风。上三节手腕为梢节，肘为中节，肩为根节。中三节，白头至主心骨为中节之上节，自主心骨至脐为中节之中节，自脐至两臀为中节之下节。下三节胯为根节，两膝为中节，两脚腕为下节。人体之构成有三百六十五节，像一片散沙不能团聚在一块。身一动有脚去手不去之患，是故习艺之人不懂三节九段，则落点不整，出手不能发出干百斤气力，能知三节九段，六合如一，身体自然能成一块，体重一斤，能打十斤，十斤能打百斤，有百斤之体自能打千斤之气力也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：梅花桩武功不论是锻炼或是技击，都要﹁ 脚手齐到才为真﹂ ，有口诀说：上下相随人难进，五形四梢俱合全，气连心意随时用，大破硬进无遮拦。</p>
+<p class="mp_comment">【评注：梅花桩武功不论是锻炼或是技击，都要“脚手齐到才为真” ，有口诀说：上下相随人难进，五形四梢俱合全，气连心意随时用，大破硬进无遮拦。</p>
 <p class="mp_comment">也就是发劲要整的意思。若落点不整，为拳法之大忌，可将人体分为三节九段，365 处关节，若如一盘散沙不能团聚一起，身一动脚去手不去，相互牵扯，上下不随，内外又不相合，怎能发出整劲?</p>
-<p class="mp_comment">凡练功时心一动则全身俱动，稍有一处不合，发手必不勇猛，落点也不坚刚。欲求疾快猛，必在落点之时发劲要整，能进能退，动如风吹不停，行如流星赶月，自然能达上乘矣。︼</p>
+<p class="mp_comment">凡练功时心一动则全身俱动，稍有一处不合，发手必不勇猛，落点也不坚刚。欲求疾快猛，必在落点之时发劲要整，能进能退，动如风吹不停，行如流星赶月，自然能达上乘矣。】</p>
 <p id="calibre_pb_17" class="mp_end"></p>
 </body>
 </html>
