--- a/epub_source/OEBPS/Text/index_split_019.html
+++ b/epub_source/OEBPS/Text/index_split_019.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_26">三尖为气之纲领论</h1>
 <p class="mp_main">凡事专一则治，以其有主宰有统率，虽千头万绪而总归于一辙也，如行军有帅之运筹，治家有家长规则，方能同心协力，于事有济。练气练形动性关命，其气之统领，气之归著可不究哉。头为诸阳之总会，领一身之气，头不合则一身之气不入矣。如俯势而头仰，则阳气不入矣，仰势而头俯，则阴气不入，左侧俯势而头反右歪，则右半之阴阳不入，右侧俯势而头左栽，则左半阴阳不入，侧仰势亦然。直起势头反缩，则下气不得上升，直落势头反顶，则上气不得下降，右旋转而头反左顾，则气不得右入；左旋转而头反右回，则气不得左入。三阴经止于手之内，三阳经止于手之背，为背月而往来血气之道路。指法之屈伸聚散，手腕之俯仰伸翘，一有不合则脾气不入矣。如平仰手直出而或反掌勾手，则气必不入，平阴手直出或反掌勾手，气亦不入；阴手下栽者，掌翘则阳气不入，仰手上冲者，掌伸则阴亦不入；平阴手前荡者，平仰手栽打者，腕勾则气亦不入，侧手直打者，跌手则气不入，侧手沉入者，翘手则气亦不入。余可类推。三阳经起于足之背，三阴经起于足之下，为腿胯往来气血之道路。一足之尖跟楞掌，脚尖之伸翘内外，一有不合则腿气不入矣。如仰势踢，脚尖若伸则阳气不入，俯势栽，脚尖若翘则阴气不入，起势直撺，脚尖若伸则气不得上升，落势下坠，脚尖若翘则气不得下降。余可类推。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：头、手、足三尖为全身气血运行之纲领。梅花桩武功讲究一动则全身俱动，此时三尖则统领全身之气血往来，稍有不合则内外失调、手足散乱、发劲不整。因此，练功中应注意发挥三尖之作用。枪、刀、剑、棍等器械，是人手足之延长，对手眼身法步的要求也更加严格。梅花桩认为拳为百般兵器之母，拳法也是器械，器械之中也有拳法。拳法是器械的基础，这点容易被人理解，而器械之中也有拳法却常常被人忽视。其实，枪、刀、剑、棍诸般兵器使用得心应手之人，其拳法也会得到极大的提高，这是因为器械的练习，使人能受到﹁ 三尖为气之纲领﹂ 的训练。︼</p>
+<p class="mp_comment">【评注：头、手、足三尖为全身气血运行之纲领。梅花桩武功讲究一动则全身俱动，此时三尖则统领全身之气血往来，稍有不合则内外失调、手足散乱、发劲不整。因此，练功中应注意发挥三尖之作用。枪、刀、剑、棍等器械，是人手足之延长，对手眼身法步的要求也更加严格。梅花桩认为拳为百般兵器之母，拳法也是器械，器械之中也有拳法。拳法是器械的基础，这点容易被人理解，而器械之中也有拳法却常常被人忽视。其实，枪、刀、剑、棍诸般兵器使用得心应手之人，其拳法也会得到极大的提高，这是因为器械的练习，使人能受到“三尖为气之纲领” 的训练。】</p>
 <p id="calibre_pb_19" class="mp_end"></p>
 </body>
 </html>
