--- a/epub_source/OEBPS/Text/index_split_020.html
+++ b/epub_source/OEBPS/Text/index_split_020.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_27">刚柔相济论</h1>
 <p class="mp_main">势无三点不落，气无二尽不尽，此阴转阴中间一阳，阳转阳中间一阴之谓也。盖落点处是气聚血凝止归之所，宜用刚法。而间阴间阳是气血流行，宜用柔法。不达乎此，纯用刚法，则气不扑满，牵扯不利，落点必不勇猛；纯用柔法，则气不聚，无有归著，落点亦不坚硬。应刚而柔，则聚而不聚，应柔而刚，则散而不散，皆不得相济之妙。故善用刚者如蜻蜓点水，一落即起，过气如风轮旋转，滚走不停，必如是则刚柔得宜，方能无气歉不实、涩滞不利之患。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：此论中刚为阳、柔为阴，刚柔相济方得天然之妙，因刚柔相济者即阴阳均匀、无过不及，不偏不倚，为一暂时平衡的太极状态。只有在此时拳法包含著无穷变化和无限的生机。阴阳不测之谓神，只有阴阳均匀时才变化莫测，拳法也才入﹁ 神化﹂ 之境。梅花桩练功者百脉流通、气血畅行而连绵不断，此也谓之气散，动作亦流利柔顺，过气如风轮旋转滚走不停。一旦落点全身之气尽集一处为气之所注，勇猛坚刚谓之气聚，但此举只在瞬间，如蜻蜒点水一落即起，绝对不能迟滞落久，否则气断僵硬矣。因此，气散在动作时须连绵不断，气聚在落点的刹那，一落即起方为刚柔相济。动时气当散不散必涩滞不利，落点气当聚不聚必气歉不实，此皆为练功和枝击之大忌。气聚气散须练之于平时而使其成为自然，用时方能得心应手，得刚柔相济之妙。︼</p>
+<p class="mp_comment">【评注：此论中刚为阳、柔为阴，刚柔相济方得天然之妙，因刚柔相济者即阴阳均匀、无过不及，不偏不倚，为一暂时平衡的太极状态。只有在此时拳法包含著无穷变化和无限的生机。阴阳不测之谓神，只有阴阳均匀时才变化莫测，拳法也才入“神化” 之境。梅花桩练功者百脉流通、气血畅行而连绵不断，此也谓之气散，动作亦流利柔顺，过气如风轮旋转滚走不停。一旦落点全身之气尽集一处为气之所注，勇猛坚刚谓之气聚，但此举只在瞬间，如蜻蜒点水一落即起，绝对不能迟滞落久，否则气断僵硬矣。因此，气散在动作时须连绵不断，气聚在落点的刹那，一落即起方为刚柔相济。动时气当散不散必涩滞不利，落点气当聚不聚必气歉不实，此皆为练功和枝击之大忌。气聚气散须练之于平时而使其成为自然，用时方能得心应手，得刚柔相济之妙。】</p>
 <p id="calibre_pb_20" class="mp_end"></p>
 </body>
 </html>
