--- a/epub_source/OEBPS/Text/index_split_021.html
+++ b/epub_source/OEBPS/Text/index_split_021.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_28">过气论</h1>
 <p class="mp_main">落点坚硬勇猛莫敌，赖全身之气尽摧一处也。然有用之不去、气去而牵扯不利，未知过气之法也。盖人身之气发于命门，气之源也。著于四末，气之注也。而其流行之道路总要无雍滞无牵扯，方能来去流利，便捷莫测。故上气在下欲入上，莫牵其下；下气在上欲入下，莫滞其上；前气在后顺其后，而前自入；后气在前理其前，而后自去；左气在右，留意于右，右气在左，留意于左。如直撞手，入气于前，不勒后手撑后肘，气不得自背而入；上冲手下手不下插，肩不下脱，气不得自肋而上升；分摆者胸不开，则气不得入于后；合抱者背不开，则气不裹于前；直起者须勾其脚，直落者易缩其项。左手气在右脚，右手气在左脚，俯势栽势前探势，宜掀其后脚之根也，坠势当坐其臀，举势宜颠其足，栽磕莫翘足，恐上顶也，踢撩莫伸脚，虑下扯也。扩而充之，势势皆然。总之，气之落也归著一处，气之来也不自一处，惟疏其源通其流，则道路滑利自不至步步为营，有牵扯不前之患矣。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：内气发于命门而著于四末，即乎足也。应疏其流通之道路，方能来去便捷莫测，然怎样疏其源通其流，使道路滑利不致步步为营呢?这就要在练功中做到彻底舍弃自我，追求无思无住、一切皆空的心理状态，才能使周身气血畅流，在运动中呈现无阻无碍、滑快自然的状态。此时一旦落点、气之住也，全身之气尽集一处，自然勇猛莫敌、威力强大。︼</p>
+<p class="mp_comment">【评注：内气发于命门而著于四末，即乎足也。应疏其流通之道路，方能来去便捷莫测，然怎样疏其源通其流，使道路滑利不致步步为营呢?这就要在练功中做到彻底舍弃自我，追求无思无住、一切皆空的心理状态，才能使周身气血畅流，在运动中呈现无阻无碍、滑快自然的状态。此时一旦落点、气之住也，全身之气尽集一处，自然勇猛莫敌、威力强大。】</p>
 <p id="calibre_pb_21" class="mp_end"></p>
 </body>
 </html>
