--- a/epub_source/OEBPS/Text/index_split_022.html
+++ b/epub_source/OEBPS/Text/index_split_022.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_29">十二节屈伸往来落气内外上下前后论</h1>
 <p class="mp_main">三尖为气之领袖，乃气所归著之处。人但知此三处宜坚实勇猛，不知落点宜全体坚硬如石，方能不惧人之冲突，不虑我之不敌也。其所以坚硬者，则在逐处之骨节。骨节者空隙也，乃人身之溪谷，为神明之所流注，此处精神填实，则如铁似钢，屈之不能伸，伸之不能屈，气力方全。手有肩、肘、腕三节，腿有胯、膝、脚三节，左右共十二节，乃人身之大骨节。手之能握，足之能步，全赖此。如实沙袋，逐层填实，虽软物使之坚硬，但气落随势，有前后内外上下之分。如侧身直势双手前攉者，肘心气填于上，手腕气骄于上，肩俱脱膝弯后凸，气填于后，脚脖伸展，气填于前，胯俱内收，气顶于内。侧身双手下劈者，肘心气填于前，手腕摧于下，前肩脱下，后肩提起，前膝屈顶，膝盖脚脖撅，气填脖后，膝胯屈，后膝颠伸外侧，脚脖伸踏外侧，颠提胯，正身前扑。双手侧竖前打者，肘心气填于中，手腕气实于外，肩俱脱，膝盖前顶，气实于前，脚脖屈握，气顶于后，胯屈握小四平势。两手平脱者，肘心气填于上，手腕气填于内，肩俱脱，膝分摆，气实外侧，脚脖内侧著力，胯外开。余可类推。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：梅花桩练功要求松肩坠肘，开档开胯，膝胯平、步子大，两臂伸向远方，动作舒展大方，为的就是要伸筋拔骨，使百脉流畅。练功时将人身之骨节空隙拉开以内气填充，动则流利柔顺便捷莫测，落点气聚神凝坚刚莫敌。气之聚散随心所欲方得自然之妙，练之于平时方能用之神明。︼</p>
+<p class="mp_comment">【评注：梅花桩练功要求松肩坠肘，开档开胯，膝胯平、步子大，两臂伸向远方，动作舒展大方，为的就是要伸筋拔骨，使百脉流畅。练功时将人身之骨节空隙拉开以内气填充，动则流利柔顺便捷莫测，落点气聚神凝坚刚莫敌。气之聚散随心所欲方得自然之妙，练之于平时方能用之神明。】</p>
 <p id="calibre_pb_22" class="mp_end"></p>
 </body>
 </html>
