--- a/epub_source/OEBPS/Text/index_split_023.html
+++ b/epub_source/OEBPS/Text/index_split_023.html
@@ -14,7 +14,7 @@
 <p class="mp_main">练形不外动静，动贵气擎不散，静如山岳难摇，方能来去无失著。每见俗学动静俱不稳妥，盖未究三尖之照与不照也。</p>
 <p class="mp_main">三尖照，则无东斜西歪之患，三尖不照，则此牵彼扯必有摇晃之失。如十字势左脚前右手前者，右手正照左脚尖，头照右手，则上中下一线，不歪不斜必稳。侧身右脚前，右手前顺势者，头照右手，右手照右脚必稳。余仿此。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：动之气擎不散，静如山岳难摇，方有动静互根之效，此即由外丹炼内丹之方法。但如要气擎不散，必须百脉畅流，道路滑利，行气如风轮旋转，滚走不停，就必须动作准确，落点清楚；若要静之如山岳无摇晃之忧，必须注意姿势正确，因此三尖相照就是练功时的一个重要原则。︼</p>
+<p class="mp_comment">【评注：动之气擎不散，静如山岳难摇，方有动静互根之效，此即由外丹炼内丹之方法。但如要气擎不散，必须百脉畅流，道路滑利，行气如风轮旋转，滚走不停，就必须动作准确，落点清楚；若要静之如山岳无摇晃之忧，必须注意姿势正确，因此三尖相照就是练功时的一个重要原则。】</p>
 <p id="calibre_pb_23" class="mp_end"></p>
 </body>
 </html>
