--- a/epub_source/OEBPS/Text/index_split_025.html
+++ b/epub_source/OEBPS/Text/index_split_025.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_32">擎停成论</h1>
 <p class="mp_main">此交手诀，非练法也。未交手先将中气吸聚中宫满腹坚硬，全体振动，勃然莫遏。如行军未对敌之先预将士聚齐，号令严明，鼓齐勇气，以待敌兵，使气有根非空洞虚壳也。擎者即气血畅流，无牵无挂，无阻无碍，连绵不断地自然运行，此即静以待敌之态也。停者已交手也，气聚神凝，落点不先不后，不偏不倚，阴阳均匀停停不多不少也。成者已交手落点之后，仍还原以待再发也。盖落点而不还原，气散而不聚或气聚而不散，则出手后不可继而再发矣。故阴势阳出者，仍还之以阴，阳势阴出者，仍还之以阳，成而不散，生生无穷，虽千万手气总不散，更兼内丹素成食气不绝，即不得食而真元充足，自无饿馁之患。历考古之名将，愈战愈猛勇增百倍者，皆是此诀，非别有元窍也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：此文说明梅花桩技击中﹁ 擎停成﹂ 之要诀。动贵气擎不散，此处之﹁ 擎﹂ 应意为内气的流畅，自然的聚散等，说的是技击前的准备，静以待动之态；停者已经落点，气聚神凝，阴阳停停均匀恰到好处、不偏不倚、准确无误；成者落点之后还原再发，成成不散。梅花桩技击一手即，则千手万手连续不断，使敌应接不暇，无法招架。梅花桩武功﹁ 气化﹂ 之后，自有食气之法、辟谷之能，可有夜战马超之精力。由于真元充足，内气调动、愈战愈勇，能勇增百倍，虽不得食亦无饥饿疲倦之现象。︼</p>
+<p class="mp_comment">【评注：此文说明梅花桩技击中“擎停成” 之要诀。动贵气擎不散，此处之“擎” 应意为内气的流畅，自然的聚散等，说的是技击前的准备，静以待动之态；停者已经落点，气聚神凝，阴阳停停均匀恰到好处、不偏不倚、准确无误；成者落点之后还原再发，成成不散。梅花桩技击一手即，则千手万手连续不断，使敌应接不暇，无法招架。梅花桩武功“气化” 之后，自有食气之法、辟谷之能，可有夜战马超之精力。由于真元充足，内气调动、愈战愈勇，能勇增百倍，虽不得食亦无饥饿疲倦之现象。】</p>
 <p id="calibre_pb_25" class="mp_end"></p>
 </body>
 </html>
