--- a/epub_source/OEBPS/Text/index_split_027.html
+++ b/epub_source/OEBPS/Text/index_split_027.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_34">行气论</h1>
 <p class="mp_main">任他勇猛气总偏，此有彼无是天然，直截横兮横截直，一气摧二二摧三，由他滑快归远路，我守安逸自粘连，如问是甚元妙诀，只在行气一动间。此交手认路占巧法也。手一出，气必偏著一面，不能四面俱著力，直出者无横力，我截其横，横出者无直力，我截其直，上出者无下力，我挑其下，下劈者无上力，我劈其上，斜正屈伸，无不皆然，此捣虚之法，攻其不备也。我出手，他若用此法，我不回手，惟转手头催二气以打之，他再变化，我摧三气以打之，此埋伏之法，出其不意也。但需占其行气方能入壳，盖方接手彼气才来，其气未停，我乘而摧之，则可东可西无不左右逢源。其机只在一动，他动我即动，他自不暇为力，若待他不动而我方动，他反乘我之行气也，其间不容毫变，学者且宜留心，以五势梅花桩为主要用功方法。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：本文介绍了两个重要的技击方法，一为捣虚之法，即交手中避实就虚、攻其无备也；二为埋伏之法，即交手之中敌不动我不动，敌微动我先动。注意：此时他动我亦动，其间不容毫发，不能有一点犹豫。否则就要错过时机，不能占其行气。敌微动时彼气才发，我动则乘而摧之，则可东可西无不左右逢源，这时我打哪里都可以，其机会只在一动的瞬间，他自不暇为力。因此，捣虚之法要分清敌之虚实。既要摧敌之虚，所以要注意打什么地方，而埋伏之法主要是把握时机，才能出敌不意。︼</p>
+<p class="mp_comment">【评注：本文介绍了两个重要的技击方法，一为捣虚之法，即交手中避实就虚、攻其无备也；二为埋伏之法，即交手之中敌不动我不动，敌微动我先动。注意：此时他动我亦动，其间不容毫发，不能有一点犹豫。否则就要错过时机，不能占其行气。敌微动时彼气才发，我动则乘而摧之，则可东可西无不左右逢源，这时我打哪里都可以，其机会只在一动的瞬间，他自不暇为力。因此，捣虚之法要分清敌之虚实。既要摧敌之虚，所以要注意打什么地方，而埋伏之法主要是把握时机，才能出敌不意。】</p>
 <p id="calibre_pb_27" class="mp_end"></p>
 </body>
 </html>
