--- a/epub_source/OEBPS/Text/index_split_028.html
+++ b/epub_source/OEBPS/Text/index_split_028.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_35">得门而入论</h1>
 <p class="mp_main">语云：法有外门，非外门乃门外也。盖拳之摧人必近其身，方能跌出。如物之藏室，不得门而入，纵神仙拳无由升堂直入探而取之矣。拳之门在手，而手之门有三。手腕一也。此外大门也，肘心二也，此进一层二门也，膀根三也，此更进一层三门也。进此三门，已进内院，可以升堂入室矣。故交手又只在手腕者，则屈伸往来任意变幻无穷无尽，手捷者先得，手慢者吃亏，终不能摧人一点即倒。著意肘心者，虽进一层门，未即近身，尚有变幻，不能操必胜之权。惟一眼注定他之膊根，不论他先出手我先出手，只在此处留心，邀住他手，粘连不离，随我变化，任意指挥，无不如意，他自不能逃我范围。师云：言不明，艺不精，先学理，后学艺，理不明，艺不通。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：本文说明技击中手为大门，肘为二门，膊根为三门。交手之时不要只在大门、二门外周旋，要得门而入，登堂入室。只有靠近敌身，才能使敌跌出。怎样才能得门?要想得门就要知道门在哪里。若问门在哪里?就要知敌出拳用力的方向，﹁ 门﹂ 就在敌手运动方向的背后。梅花桩技击交手之时，一般不要拦截架打，而是闪化为上，但闪化即打，使敌摸不清我手力量的方向和大小，见﹁ 门﹂ 即入，直摧敌身，这要比捣虚之法更胜一筹，其每出一手都使敌感到很大的威胁。︼</p>
+<p class="mp_comment">【评注：本文说明技击中手为大门，肘为二门，膊根为三门。交手之时不要只在大门、二门外周旋，要得门而入，登堂入室。只有靠近敌身，才能使敌跌出。怎样才能得门?要想得门就要知道门在哪里。若问门在哪里?就要知敌出拳用力的方向，“门” 就在敌手运动方向的背后。梅花桩技击交手之时，一般不要拦截架打，而是闪化为上，但闪化即打，使敌摸不清我手力量的方向和大小，见“门” 即入，直摧敌身，这要比捣虚之法更胜一筹，其每出一手都使敌感到很大的威胁。】</p>
 <p id="calibre_pb_28" class="mp_end"></p>
 </body>
 </html>
