--- a/epub_source/OEBPS/Text/index_split_030.html
+++ b/epub_source/OEBPS/Text/index_split_030.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_37">点气论</h1>
 <p class="mp_main">似梦地著惊，似悟道忽醒，似皮肤燃火星，似寒浸腠理打战悚，想情景疾快猛，原来是真意泓浓，震雷迅发离火焰烘，俗学不悟元中窍，丢却另寻那得醒。著人肌肤坚刚莫敌者形也，而深入骨髓截断营卫则在乎气。气之所著未有不疼，疼则不通，理应然也。能断血气之道路使不接续，能壅塞气血之运转使不流通，可以粉骨绝筋，毙性命于顷刻，气之为用大矣哉。但须明其聚，知其发，神其用，方能入壳如射之中的，形体不偏不倚，如矢之端直镞羽停匀，神凝气充，圆如开弓，弓圆劲满，其中的之神勇，可穿杨叶彻七劄，则在乎撒放之灵与不灵也。故气发如炮之燃火，如弩之离弦，陡然而至。熟玩此词，自然得之心而应之手，切勿作闲语观也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：梅花桩技击打人称为点气，交手之中敌我双方内气都在活跃，我乘敌之势而打其气还是比较容易的，所谓点穴因有一定之位置，反而不易打准。当打敌人之气时，发手于猝然之间，且一落即起，故称为点气。本文在开头时用﹁ 梦地著惊﹂ 、﹁ 悟道忽醒﹂ 、﹁ 皮肤燃火星﹂ 、﹁ 寒浸腠理打战悚﹂ 等描述发手击敌时之﹁ 忽然﹂ 。此﹁ 忽然﹂ 而动不是由意念指挥的，而是由灵感激发后攸忽而至的自然之态。文中的﹁ 原来是真意泓浓，震雷迅发离火焰烘﹂ ，写出了技击者出手摧敌时，拳法已达神化之境的内心体验。一团真意由玄牝一窍攸然而发，忽然，震雷迅发、离火焰烘。此情此景正是气擎不散，停停均匀之时，学者应细心领悟。文中又讲了点气之威力，能断血气之道路，雍塞气血之通途，可粉骨绝筋毙性命于顷刻。点气之要点，应﹁ 明其聚，知其发，神其用﹂ ，气擎不散、内丹充实谓之聚；停停均匀、不偏不倚谓之发；而神其用者全在于撒放之灵不灵也，气发如炮之燃火、弩之离弦，陡然而至，此时全在于灵感的激发，应熟玩此词，方能悟其真谛，用之得心应手。︼</p>
+<p class="mp_comment">【评注：梅花桩技击打人称为点气，交手之中敌我双方内气都在活跃，我乘敌之势而打其气还是比较容易的，所谓点穴因有一定之位置，反而不易打准。当打敌人之气时，发手于猝然之间，且一落即起，故称为点气。本文在开头时用“梦地著惊” 、“悟道忽醒” 、“皮肤燃火星” 、“寒浸腠理打战悚” 等描述发手击敌时之“忽然” 。此“忽然” 而动不是由意念指挥的，而是由灵感激发后攸忽而至的自然之态。文中的“原来是真意泓浓，震雷迅发离火焰烘” ，写出了技击者出手摧敌时，拳法已达神化之境的内心体验。一团真意由玄牝一窍攸然而发，忽然，震雷迅发、离火焰烘。此情此景正是气擎不散，停停均匀之时，学者应细心领悟。文中又讲了点气之威力，能断血气之道路，雍塞气血之通途，可粉骨绝筋毙性命于顷刻。点气之要点，应“明其聚，知其发，神其用” ，气擎不散、内丹充实谓之聚；停停均匀、不偏不倚谓之发；而神其用者全在于撒放之灵不灵也，气发如炮之燃火、弩之离弦，陡然而至，此时全在于灵感的激发，应熟玩此词，方能悟其真谛，用之得心应手。】</p>
 <p id="calibre_pb_30" class="mp_end"></p>
 </body>
 </html>
