--- a/epub_source/OEBPS/Text/index_split_033.html
+++ b/epub_source/OEBPS/Text/index_split_033.html
@@ -25,7 +25,7 @@
 <p class="mp_main">进 蝴蝶对飞 退 狸猫捕鼠</p>
 <p class="mp_main">踏 石柱触地 挂 钝镰割谷</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：此24 气各有不同的意境。梅花桩练功与技击都要进入一定的意境，要求一定的心态。如练架子时要求无思无住，一切皆空，把自己与天地溶为一体，对周围的一切视而不见，听而不闻。又如上戳天下拄地，上摘星下伏虎，两臂前后成一直线，伸向前后极远之处，上劐下挑于天地之间划一条鸿沟，等等。梅花桩与敌交手之时心中无我无他，如入无人之境。俗语常说：练时无人似有人，用时有人似无人，这都是对意境、心态的要求。文中二十四气的各个意境，练者应悉心体验领悟，必有所得。︼</p>
+<p class="mp_comment">【评注：此24 气各有不同的意境。梅花桩练功与技击都要进入一定的意境，要求一定的心态。如练架子时要求无思无住，一切皆空，把自己与天地溶为一体，对周围的一切视而不见，听而不闻。又如上戳天下拄地，上摘星下伏虎，两臂前后成一直线，伸向前后极远之处，上劐下挑于天地之间划一条鸿沟，等等。梅花桩与敌交手之时心中无我无他，如入无人之境。俗语常说：练时无人似有人，用时有人似无人，这都是对意境、心态的要求。文中二十四气的各个意境，练者应悉心体验领悟，必有所得。】</p>
 <p id="calibre_pb_33" class="mp_end"></p>
 </body>
 </html>
