--- a/epub_source/OEBPS/Text/index_split_035.html
+++ b/epub_source/OEBPS/Text/index_split_035.html
@@ -42,9 +42,9 @@
 <p class="mp_poetry_line">前后左右撑拨腿，前豁后跳上下翻。</p>
 <p class="mp_poetry_line">脚打七分手打三，千变万化快为先。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：从本文可以看出，五势之变化只要符合阴阳转结之理，就无拘无束，无穷无尽。在技击中，大势可看作是一脚实、一脚半虚半实的预备姿势，这时主要是察敌人之来势，审敌人之短长，因敌人之动而动，见手使手，借劲使劲。梅花桩技击只有出手引手，见手使手，没有自己先出手击敌的。彼不动己不动、彼微动己先动是梅花桩技击的原则。后发先至，后发制人是梅花桩技击的特点。顺势是顺身顺步，两脚俱实的击敌之势，它的变化很灵活，能四面出手上步，不单只攻一路。拗势之特点是拗步斜身，能横走竖撞，出手迅速而又威力强大，各种腿法也使用方便，任意变化，故有梅花桩得意手之称。小势为一脚虚一脚实之击敌姿势，多在小踢小打、小捉小拿时用之，它变化迅速，出腿方便，如猿猴一样灵活。败势为梅花桩特有之拳势，世间只有梅花拳敢于言败，且专设一势称为败势，其意深远。观败势之形态有抽撤、闪化之象。梅花桩的技击原则认为﹁ 抽撤即攻，闪化即打﹂ 。而事实也确如此。梅花桩之练功于平凡中见伟大，在其技击中又能败中取胜，出敌意料。要注意此败中取胜绝不是诈败佯输的诱敌之法，因此并没有任何主观意念挑选，交手之时并没有设什么圈套，考虑什么计谋，而是真败，但此败却成了启动灵感的信息，故转败为胜是因势利导、顺理成章、自然而然之结局，这也正是梅花桩武功的精深博奥的特点之一。梅花桩武功可使敌惨败于他最得意的一刹那间，这就是败势之能为。</p>
-<p class="mp_comment">五势之变化虽为练法，但却包藏了技击的精华，这也就是﹁ 绝手乱拳皆包藏于其中﹂ 的道理。若把学习梅花桩五势之基本变化称为﹁ 立﹂ ，那么本文所介绍的五势之变化就是﹁ 破﹂ ，也就是说本文所说的五势变化的口诀，是使梅花桩架子打破基本套路的框框，而上升到无形无态的高级阶段的方法和规律。</p>
-<p class="mp_comment">五势的变化是梅花桩架子变化的基础，当然此外还有行步的变化，正是由于架子可以千变万化，也能提高练功者的悟性，所以它才可以万法归宗、隐于无形。︼</p>
+<p class="mp_comment">【评注：从本文可以看出，五势之变化只要符合阴阳转结之理，就无拘无束，无穷无尽。在技击中，大势可看作是一脚实、一脚半虚半实的预备姿势，这时主要是察敌人之来势，审敌人之短长，因敌人之动而动，见手使手，借劲使劲。梅花桩技击只有出手引手，见手使手，没有自己先出手击敌的。彼不动己不动、彼微动己先动是梅花桩技击的原则。后发先至，后发制人是梅花桩技击的特点。顺势是顺身顺步，两脚俱实的击敌之势，它的变化很灵活，能四面出手上步，不单只攻一路。拗势之特点是拗步斜身，能横走竖撞，出手迅速而又威力强大，各种腿法也使用方便，任意变化，故有梅花桩得意手之称。小势为一脚虚一脚实之击敌姿势，多在小踢小打、小捉小拿时用之，它变化迅速，出腿方便，如猿猴一样灵活。败势为梅花桩特有之拳势，世间只有梅花拳敢于言败，且专设一势称为败势，其意深远。观败势之形态有抽撤、闪化之象。梅花桩的技击原则认为“抽撤即攻，闪化即打” 。而事实也确如此。梅花桩之练功于平凡中见伟大，在其技击中又能败中取胜，出敌意料。要注意此败中取胜绝不是诈败佯输的诱敌之法，因此并没有任何主观意念挑选，交手之时并没有设什么圈套，考虑什么计谋，而是真败，但此败却成了启动灵感的信息，故转败为胜是因势利导、顺理成章、自然而然之结局，这也正是梅花桩武功的精深博奥的特点之一。梅花桩武功可使敌惨败于他最得意的一刹那间，这就是败势之能为。</p>
+<p class="mp_comment">五势之变化虽为练法，但却包藏了技击的精华，这也就是“绝手乱拳皆包藏于其中” 的道理。若把学习梅花桩五势之基本变化称为“立” ，那么本文所介绍的五势之变化就是“破” ，也就是说本文所说的五势变化的口诀，是使梅花桩架子打破基本套路的框框，而上升到无形无态的高级阶段的方法和规律。</p>
+<p class="mp_comment">五势的变化是梅花桩架子变化的基础，当然此外还有行步的变化，正是由于架子可以千变万化，也能提高练功者的悟性，所以它才可以万法归宗、隐于无形。】</p>
 <p id="calibre_pb_35" class="mp_end"></p>
 </body>
 </html>
