--- a/epub_source/OEBPS/Text/index_split_036.html
+++ b/epub_source/OEBPS/Text/index_split_036.html
@@ -16,7 +16,7 @@
 
 
 	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_47">校勘记</h1>
-<p class="mp_main">︽梅花拳秘谱︾是山东大学几位十八代梅花拳弟子根据北京大学1963 年11 月的油印本抄录的。该油印本是根据韩其昌老师所收藏的︽梅花拳秘谱︾手抄本刻印的。原手抄本用毛笔直行楷书抄写，无标点符号。此原件在﹁ 十年文革动乱﹂ 中遗失。现仅留油印本一份，该件由于刻印技术不佳，个别文字重叠、模糊无法复原，请读者注意。燕子杰始校1990年4月16日，1992年5月2日校完，并稍作批注。</p>
+<p class="mp_main">《梅花拳秘谱》是山东大学几位十八代梅花拳弟子根据北京大学1963 年11 月的油印本抄录的。该油印本是根据韩其昌老师所收藏的《梅花拳秘谱》手抄本刻印的。原手抄本用毛笔直行楷书抄写，无标点符号。此原件在“十年文革动乱” 中遗失。现仅留油印本一份，该件由于刻印技术不佳，个别文字重叠、模糊无法复原，请读者注意。燕子杰始校1990年4月16日，1992年5月2日校完，并稍作批注。</p>
 <p id="calibre_pb_36" class="mp_end"></p>
 </body>
 </html>
