--- a/epub_source/OEBPS/Text/index_split_037.html
+++ b/epub_source/OEBPS/Text/index_split_037.html
@@ -10,7 +10,7 @@
  
 </head>
   <body class="mp_body">
-    <h1 class="mp_title" id="calibre_toc_48">习武序︵ 考订本︶</h1>
+    <h1 class="mp_title" id="calibre_toc_48">习武序（ 考订本）</h1>
 <p class="mp_main">杨炳 著</p>
 <p class="mp_main">杨彦明 考订</p>
 <p class="mp_main">有谓至治之世而武可以不练，此言之者迂也。盖武可以百年不用，不可一日不备。自古圣帝明王莫不隆文重武，公卿大夫率皆出将入相。无如时至近今，每多庸儒俗子，互相讥笑，文而弗武者有之，武而弗文者有之。此无他，皆所以自待者薄而期许者浅也。故孟子曰：待文王而后兴者，凡民也。若夫豪杰之士，虽无文王犹兴。</p>
@@ -23,8 +23,8 @@
 <p class="mp_main">立教条目：</p>
 <p class="mp_main">拳堂中间立</p>
 <p class="mp_main">天地君亲师 神位</p>
-<p class="mp_main">左书：振三纲须赖真武︵ 论纲常要恃文友讲︶</p>
-<p class="mp_main">右书：整五常全凭大文︵ 定太平还让武将能︶</p>
+<p class="mp_main">左书：振三纲须赖真武（ 论纲常要恃文友讲）</p>
+<p class="mp_main">右书：整五常全凭大文（ 定太平还让武将能）</p>
 <p class="mp_main">上书：一贯之道</p>
 <p class="mp_main">设炉次第：上三炉，左一炉，右一炉</p>
 <p class="mp_main">上香定则：五炉上香不必拘定。一握十数柱，上三炉或一握六柱，东炉三柱，西炉五柱。亦可为其贫富不等，只要诚敬为主，且简可行。</p>
