--- a/epub_source/OEBPS/Text/index_split_040.html
+++ b/epub_source/OEBPS/Text/index_split_040.html
@@ -13,7 +13,7 @@
 	<h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_51">一贯之道</h1>
 <p class="mp_main">易有太极，是生两仪，两仪生四象，四象生八卦，八卦生六十四爻，生生无穷。夫一者，太极也。贯者，生生不穷之仪也。易曰：生生之谓易，阴阳不测之谓神。夫干，其静也专，其动也直，是以大生焉。夫坤，其静也翕，其动也辟，是以广生焉。天地设位，而易行乎其中矣。成性存存，道义之门，引而伸之，触类而长之，天下之能事毕矣。子曰：知变化之道者，其知神之所为乎。世子欲学文武之道者，一而已矣，讵可泛视也哉！</p>
 <p class="mp_main">问：至圣之心如明镜止水者，何谓也？答曰：即周子通书曰：寂然不动者，诚也；感而遂通者，神也；动而未形，有无之间者几也。诚精故明，神感故妙，几微故幽。诚神、几、曰圣人。一谓为太极者，何谓也？答曰：道为太极，心为太极，万物之理具于一心，随感而应，皆合其宜，如四时行百物生，故曰圣心一太极。</p>
-<p class="mp_main">太极拍位图︵ 略︶</p>
+<p class="mp_main">太极拍位图（ 略）</p>
 <p id="calibre_pb_40" class="mp_end"></p>
 </body>
 </html>
