--- a/epub_source/OEBPS/Text/index_split_016.html
+++ b/epub_source/OEBPS/Text/index_split_016.html
@@ -13,7 +13,7 @@
 <h1 class="mp_title" u00024commentu0005bu00027idu00027u0005d="" id="calibre_toc_23">四时行功加减论</h1>
 <p class="mp_main">四时者春夏秋冬也。由冬至春，天之阴阴中之阳也，由春至夏，天之阳阳中之阳也，由夏至秋，天之阳阳中之阴也，由秋至冬，天之阴阴中之阴也。此为四气也。四气之内又分八节，即立春立夏立秋立冬春分秋分夏至冬至，此为四时八节也。四时八节气候阴阳变化之不同，人之气血也随之变化不同，当春夏行功，人之气血活跃时当渐增之，当秋冬气血收藏之时当保持原状。当遇到交节之时，身体如有疲劳，此换气也。气换神疲，神疲则身劳当减练。如久练艺不进者，此为艺疲也，当加功练之。此四时行功加减法，不可不知也。</p>
 <p class="mp_separator"></p>
-<p class="mp_comment">︻评注：人的气血在不同的季节亦有不同的活动规律。梅花桩武功锻炼的方法和内容，也应随著季节的不同而有所变化。在农历节气的前后，人的气血活动规律常有较大的改变，练功者常感到疲劳或不适，称此为﹁ 换气﹂ ，﹁ 换气﹂ 时可减练或停练；文中也指出﹁ 艺疲﹂ 之现象，艺疲时应加功练习。上述﹁ 换气﹂ 、﹁ 艺疲﹂ 等现象至武功较高层次后即减轻或消失。︼</p>
+<p class="mp_comment">【评注：人的气血在不同的季节亦有不同的活动规律。梅花桩武功锻炼的方法和内容，也应随著季节的不同而有所变化。在农历节气的前后，人的气血活动规律常有较大的改变，练功者常感到疲劳或不适，称此为“换气” ，“换气” 时可减练或停练；文中也指出“艺疲” 之现象，艺疲时应加功练习。上述“换气” 、“艺疲” 等现象至武功较高层次后即减轻或消失。】</p>
 <p id="calibre_pb_16" class="mp_end"></p>
 </body>
 </html>
